# ilhadocombujogo

./: .gitignore  Ilha_do_Combu.spec  README.md  pyproject.toml  savegame.json
docs/: DIRETRIZES.md
src/ilha_do_combu/: __init__.py  __main__.py  art.py  camera.py  dialogue.py  factory.py  fonts.py  game.py  player.py  plot.py  prop.py  settings.py  tilemap.py  transition.py
src/ilha_do_combu/scenes/: __init__.py  base.py  hacker.py  harvest.py  house.py  outdoor.py  river.py  title.py  ufpa.py
tests/: conftest.py  test_art.py  test_world.py
tools/: make_icon.py  preview_art.py  screenshot_states.py
