[project]
name = "ilha-do-combu"
version = "0.1.0"
description = "Jogo educativo top-down sobre a Ilha do Combu e o cultivo do cacau (Projetos III - UFPA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5",
]

[project.scripts]
ilha-do-combu = "ilha_do_combu.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ilha_do_combu"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
